--- a/SGE/U5/mis_series/report/mis_series_report.xml
+++ b/SGE/U5/mis_series/report/mis_series_report.xml
@@ -11,6 +11,12 @@
     </record>
 
     <template id="report_mis_series_view">
+        <style>
+            h1{
+                color: red;
+            }
+        </style>
+
         <t t-foreach="docs" t-as="x_serie">
             <t t-call="web.html_container">
                 <t t-call="web.external_layout">
@@ -18,8 +24,10 @@
                         <h1>
                             <span t-field="x_serie.x_name"/>
                         </h1>
-                        <table class="table table-sm o_main_table">
-                            <thead>
+                        <br>
+                        </br>
+                        <table class="table table-sm mx-auto">
+                            <thead class="table_header">
                                 <tr>
                                     <th><h5>Género</h5></th>
                                     <th><h5>Director</h5></th>
