--- a/SGE/U5/mis_series/report/mis_series_report.xml
+++ b/SGE/U5/mis_series/report/mis_series_report.xml
@@ -21,13 +21,13 @@
             <t t-call="web.html_container">
                 <t t-call="web.external_layout">
                     <div class="page">
-                        <h1>
+                        <h1 style="width: 100%; text-align: center">
                             <span t-field="x_serie.x_name"/>
                         </h1>
                         <br>
                         </br>
                         <table class="table table-sm mx-auto">
-                            <thead class="table_header">
+                            <thead style="background-color: grey; color: white;">
                                 <tr>
                                     <th><h5>Género</h5></th>
                                     <th><h5>Director</h5></th>
